minor bug fixes and cleanup

--- a/signoffs/templates/signoffs/approvals/approval.html
+++ b/signoffs/templates/signoffs/approvals/approval.html
@@ -1,5 +1,5 @@
 {# Renders all the signed and next-to-be signed signoffs for the approval instance #}
-{% load singoff_tags %}
+{% load signoff_tags %}
 
 <div class="signoffs approval">
     <div class="panel panel-{{ approval.status.get_css_class }}">
