--- a/signoffs/templates/signoffs/approvals/approval.html
+++ b/signoffs/templates/signoffs/approvals/approval.html
@@ -18,7 +18,7 @@
             {% endfor %}
         </ul>
         {% with signoffs=approval|next_signoffs_for_user:request.user %}
-            {% if signoffs %}
+            {% if signoffs and render_signoff_forms %}
                 <div class="panel-footer">
                     <h5>
                         {{ approval.label }} {{ request.user.get_full_name }}
