--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Powderflask News{% endblock %}</title>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.2/dist/htmx.js" integrity="sha384-yZq+5izaUBKcRgFbxgkRYwpHhHHCpp5nseXp0MEQ1A4MTWVMnqkmcuFez8x5qfxr" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx-ext-debug@2.0.0/debug.js"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<div>
+<div class="bg-dark text-light">
     <div style="min-height: 93vh; display: flex; flex-direction: column;">
 
         <!-- Navigation Bar -->
@@ -39,6 +43,7 @@
                                     {% if user.is_staff %}
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{% url 'assignment:new' %}">New Assignment</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'assignment:dashboard' %}">Assignments Dashboard</a></li>
                                     {% endif %}
                                 </ul>
                             </li>
@@ -71,7 +76,7 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="container mx-auto mt-5">
+        <div class="container mx-auto mt-4 bg-b">
             {% block content %}
             {% endblock %}
         </div>
