--- a/demo/assignments/templates/assignments/htmx_signoffs/approval.html
+++ b/demo/assignments/templates/assignments/htmx_signoffs/approval.html
@@ -1,7 +1,14 @@
 {# Renders all the signed and next-to-be signed signoffs for the approval instance #}
 {% load signoff_tags %}
 {#might be able to keep the div `id` dynamic by using the escapejs filter on approval.id? #}
-<div class="signoffs approval" id="approval-content">
+<div class="signoffs approval"
+     id="{{ approval.id|slugify }}-container"
+{#     hx-swap-oob="true:innerHTML"#}
+     hx-target="#{{ approval.id|slugify }}-container"
+     hx-swap="outerHTML"
+     hx-select="#{{ approval.id|slugify }}-container"
+     
+>
     <div class="panel panel-{{ approval.status.get_css_class }}">
         <div class="panel-heading pb-2">
             <strong>{{ approval.label }}</strong>
@@ -22,7 +29,6 @@
         {% with signoffs=approval|next_signoffs_for_user:request_user %}
             {% if signoffs and render_signoff_forms %}
                 <div class="panel-footer pt-3"
-{#                     hx-vals='{"approval_id": "{{ approval.id }}"}'#}
                 >
                     <h5>
                         {{ approval.label }} {{ request_user.get_full_name }}
