--- a/demo/assignments/templates/assignments/dashboard.html
+++ b/demo/assignments/templates/assignments/dashboard.html
@@ -2,8 +2,11 @@
 {% load signoff_tags %}
 
 {% block title %}Assignments Dashboard - Powderflask News{% endblock %}
-
 {% block content %}
+{#{% include "assignments/dashboard-widgets/content-updater.html" %}#}
+{#<div class="row" id="test-buttons">#}
+{#    {% include "assignments/dashboard-widgets/test-buttons.html" %}#}
+{#</div>#}
 <div class="row">
     <!-- render the assignment here -->
     <div class="col-12 col-md-8">
@@ -24,27 +27,37 @@
                 <!-- messages -->
                 <div class="card border-0 border-secondary bg-dark text-bg-dark"
                      style="max-height: 30vh"
-                     id="messages-card"
-                     hx-trigger="afterload, update-messages from:body"
-                     hx-get="{% url 'assignment:refresh-messages' %}"
-                     hx-target="#messages-content"
-                     hx-swap="afterbegin"
                 >
-                    <div class="rounded-pill my-3 px-3 shadow-lg">
-                        <h5>Notifications</h5>
+                    <div class="rounded-pill mt-3 px-3 shadow-lg">
+                        <h5>Notifications
+                            <span>
+                                <button class="btn btn-sm btn-outline-danger float-end"
+                                        id="clear-messages-btn"
+                                     _="on click remove <div.alert/> in #messages-content
+                                     then hide me
+                                     then send closedMessage to #no-messages-text end
+                                     on load hide me"
+                                >Clear</button>
+                            </span>
+                        </h5>
                     </div>
                     <div class="card-body overflow-y-auto" {# hx-trigger="refresh-messages" #}
                          style="max-height: 30vh;"
                          hx-ext="debug"
                          id="messages-content"
                     >
-                    {% include "assignments/dashboard-widgets/messages.html" %}
-                        <span class="text-muted"
+                        <span class="text-bg-dark"
                             id="no-messages-text"
-                            _="on checkMessages or load if #alert-message then hide me"
+                              _="on closedMessage or load from body wait until settle then
+                                if the previous <div.alert/>
+                                    show #clear-messages-btn then hide me
+                                else
+                                    hide #clear-messages-btn then show me
+                                end"
                         >
                           No notifications to display.
                         </span>
+{#                        {% include "assignments/dashboard-widgets/messages.html" %}#}
                     </div>
                 </div>
 {#                <div hx-trigger="load" hx-get="{% url "assignment:refresh-messages" %}" hx-swap="outerHTML"></div>#}
