--- a/demo/assignments/templates/assignments/htmx_signoffs/signet.html
+++ b/demo/assignments/templates/assignments/htmx_signoffs/signet.html
@@ -26,7 +26,7 @@
            title="Revoke this signoff"
            aria-description="Revoke this signoff"
            hx-post="{{ signoff.urls.get_revoke_url }}"
-           hx-headers='{"X-CSRFToken": "{{ csrf_token }}", "signoff_type": "{{ signoff.id }}"}'
+           hx-headers='{"signoff_type": "{{ signoff.id }}"}'
            hx-confirm="
 Revoke this signoff?
 This action can NOT be undone."
