--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<div class="bg-dark text-light">
+<body class="bg-dark text-light">
     <div style="min-height: 93vh; display: flex; flex-direction: column;">
 
         <!-- Navigation Bar -->
@@ -82,7 +82,7 @@
         </div>
 
     </div>
-</div>
+</body>
     <!-- Footer -->
     <footer class="bg-dark text-light py-3" style="position: page;bottom: 0; left: 0; right: 0;">
         <div class="container text-center">
