--- a/demo/assignments/templates/assignments/dashboard-widgets/assignment_details.html
+++ b/demo/assignments/templates/assignments/dashboard-widgets/assignment_details.html
@@ -35,11 +35,9 @@
             <div class="card-body p-3 d-flex align-items-center justify-content-center"> <!-- Centers content vertically and horizontally -->
                 <div class="signoffs approval-signoff"
                      hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                     hx-vals='{
-                        "approval_type": "{{assignment.approval.id}}",
-                        "subject_pk": "{{ assignment.id }}"}'
+                     hx-vals='{"approval_type": "{{assignment.approval.id}}", "subject_pk": "{{ assignment.id }}"}'
                 >
-                    {% render_approval assignment.approval %}
+                    {% render_approval assignment.approval use_htmx=True is_oob=False %}
                 </div>
             </div>
         </div>
@@ -57,7 +55,7 @@
             Reset
         </button>
     </div>
-        
+
 
     {% else %}
     <div class="card-body bg-body-secondary" style="text-align: center;">
