--- a/demo/assignments/templates/assignments/assignment_list_view.html
+++ b/demo/assignments/templates/assignments/assignment_list_view.html
@@ -18,7 +18,7 @@
                 <h5 class="card-title">{{ assignment.assignment_name }}</h5>
                 <h6 class="text-success">{{ assignment.get_status_display }}</h6>
                 <p class="card-text">Assigned To: {{ assignment.assignee }}</p>
-                <a href="{% url 'assignment:detail' assignment_id=assignment.id %}" class="btn btn-outline-dark">See Assignment Details</a>
+                <a href="{% url 'assignment:detail' assignment_pk=assignment.pk %}" class="btn btn-outline-dark">See Assignment Details</a>
             </div>
         </div>
         {% endfor %}
