--- a/demo/assignments/templates/assignments/htmx_signoffs/signet.html
+++ b/demo/assignments/templates/assignments/htmx_signoffs/signet.html
@@ -21,7 +21,7 @@
                 {{ signoff.timestamp|date:"DATE_FORMAT" }}
             </span>
         {% if is_revokable %}
-        <span class="link-danger revoke-button ms-3 float-end"
+        <a class="link-danger revoke-button ms-3 float-end link-underline-opacity-0"
            type="button"
            title="Revoke this signoff"
            aria-description="Revoke this signoff"
@@ -36,7 +36,7 @@ This action can NOT be undone."
         {% endif %}
         >
             Revoke
-        </span>
+        </a>
         {% endif %}
         </div>
         {% if with_signature_line %}
